Update docs link

--- a/content/vale-server.html
+++ b/content/vale-server.html
@@ -24,7 +24,7 @@ js: [
             life.
             </span>
             <a href="#puchase" class="btn btn-lg btn-success">Get Started</a>
-            <a href="https://errata-ai.github.io/vale-server/docs/install" class="btn btn-lg btn-link" target="_blank">Documentation <i class="icon-chevron-right"></i></a>
+            <a href="https://docs.errata.ai/vale-server/install" class="btn btn-lg btn-link" target="_blank">Documentation <i class="icon-chevron-right"></i></a>
          </div>
          <div class="justify-content-center text-center">
             <div class="popover-image">
