--- a/content/vale-server.html
+++ b/content/vale-server.html
@@ -360,7 +360,7 @@ js: [
                 <span class="title-decorative" data-aos="fade-up" data-aos-delay="10">Simple, one-time pricing</span>
                 <h2 class="display-5" data-aos="fade-up" data-aos-delay="100">No subscriptions</h2>
                 <span class="lead" data-aos="fade-up" data-aos-delay="200">Vale Server offers one-time pricing, avoiding the hassle of managing subscriptions and surprise charges.</span>
-                <button id="trial-btn" type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-outline-primary btn-lg">Download Free Trial</button>
+                <button id="trial-btn" type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-outline-primary btn-lg" disabled>Download Free Trial (Coming Soon!)</button>
                 <a class="btn btn-success btn-lg" href="https://gum.co/tfzHE" target="_blank">Buy Now $40</a>
                 <p id="trial-text" class="small mt-3">
                     Vale Server offers 30-day, zero-obligation free trial&mdash;no payment information required!
