--- a/content/manage.html
+++ b/content/manage.html
@@ -4,11 +4,16 @@ slug: manage
 
 layout: blank
 
-css: []
+css: ["manage.css"]
+js: ["manage.js"]
 ---
 
 <section class="space-sm height-70">
-  <img alt="Image" src="/img/backgrounds/graphic-bg-clouds-1.png" class="bg-image" />
+  <img
+    alt="Image"
+    src="/img/backgrounds/graphic-bg-clouds-1.png"
+    class="bg-image"
+  />
   <div class="container align-self-start">
     <div class="row mb-5">
       <div class="col text-center">
@@ -19,12 +24,27 @@ css: []
     <!--end of row-->
     <div class="row justify-content-center">
       <div class="col-12 col-md-8 col-lg-7">
-        <div class="card card-lg text-center">
+        <div id="activations">
+          <table id="act-list" class="table align-items-center">
+            <caption id="key-caption"></caption>
+            <thead>
+              <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Activated</th>
+                <th scope="col">License</th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+        </div>
+        <div id="license-section" class="card card-lg text-center">
           <div class="card-body">
             <div class="mb-3">
               <h1 class="h2 mb-2">Manage your activations</h1>
               <span>
-                Enter your license key below to manage your active activations.
+                Enter your license key below to manage your current activations.
               </span>
             </div>
             <div class="row no-gutters justify-content-center">
@@ -35,13 +55,18 @@ css: []
                     class="form-control form-control-lg"
                     type="text"
                     name="license"
-                    id="key-entry"
+                    id="license-input"
                     placeholder="XXXXXXXX-XXXXXXXX-XXXXXXXX-XXXXXXXX"
+                    required
                   />
                 </div>
                 <div class="text-center mt-3">
-                  <button type="submit" class="btn btn-lg btn-success">
-                    Go to my account <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+                  <button
+                    id="validate"
+                    type="submit"
+                    class="btn btn-lg btn-success"
+                  >
+                    Go to my account &rsaquo;
                   </button>
                 </div>
               </form>
@@ -50,9 +75,13 @@ css: []
           </div>
         </div>
         <div class="text-center">
-          <span class="text-small"
-            >Forgot your license key? <a href="https://gumroad.com/license-key-lookup" target="_blank">Retrieve it now.</a>
+          <span id="forgot-key" class="text-small"
+            >Forgot your license key?
+            <a href="https://gumroad.com/license-key-lookup" target="_blank"
+              >Retrieve it now.</a
+            >
           </span>
+          <a id="back-to-key" href="#" class="forget back">Back</a>
         </div>
       </div>
       <!--end of col-->
