--- a/content/vale-server.html
+++ b/content/vale-server.html
@@ -6,6 +6,8 @@ layout: blank
 
 css: ["popimg.css", "devices.min.css", "button.css"]
 js: ["platform.js"]
+
+gumroad: true
 ---
 
 <section class="pb-0 bg-white">
@@ -529,7 +531,7 @@ js: ["platform.js"]
     <div class="row justify-content-center text-center">
       <div class="col-12 col-md-9 col-lg-8">
         <span class="title-decorative" data-aos="fade-up" data-aos-delay="10"
-          >Simple Pricing</span
+          >Flexible Pricing</span
         >
         <h2 class="display-5" data-aos="fade-up" data-aos-delay="100">
           The right price for you
@@ -538,7 +540,7 @@ js: ["platform.js"]
           >Get started with a 30-day, zero-obligation free trial—no payment
           information required!</span
         >
-        <a id="platform-btn" href="#" class="button btn dropbox">
+        <a id="platform-btn" href="#" class="button btn dropbox" download>
           <span>
             <i class="fab fa-apple" aria-hidden="true"></i>
           </span>
@@ -573,12 +575,12 @@ js: ["platform.js"]
             <tr>
               <th scope="row">Price</th>
               <td>
-                <span class="display-4">$60</span>
+                <span class="display-4">$59</span>
                 <span class="text-small">one-time charge</span>
               </td>
               <td>
-                <span class="display-4">$30</span>
-                <span class="text-small">per month</span>
+                <span class="display-4">$49</span>
+                <span class="text-small">per month<br>(varies by team size)</span>
               </td>
             </tr>
             <tr>
@@ -612,10 +614,10 @@ js: ["platform.js"]
             <tr>
               <th scope="row"></th>
               <td>
-                <a class="btn btn-link" href="#">Buy an Individual license</a>
+                <a class="gumroad-button" href="https://gum.co/tfzHE" target="_blank" data-gumroad-single-product="true">Buy now</a>
               </td>
               <td>
-                <a class="btn btn-link" href="#">Buy a Team license</a>
+                <a class="gumroad-button" href="https://gum.co/VtmAp" target="_blank" data-gumroad-single-product="true">Sign up</a>
               </td>
             </tr>
           </tbody>
@@ -695,6 +697,25 @@ js: ["platform.js"]
           <div class="card-body">
             <h6>What is your update policy?</h6>
             <p>Existing license holders receive all bug fixes and same-version feature updates. <br><br>Major version releases (for example, <code>v1.x.x</code> to <code>v2.0.0</code>) may require an upgrade.</p>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-12 col-md-6 col-lg-5" id="update-policy">
+        <div class="card">
+          <div class="card-body">
+            <h6>What is your refund policy?</h6>
+            <p>We do not offer refunds. Instead, we offer a 30-day, zero-obligation free trial to allow you to evaluate Vale Server prior to buying.</p>
+          </div>
+        </div>
+      </li>
+
+      <li class="col-12 col-md-6 col-lg-5" id="update-policy">
+        <div class="card">
+          <div class="card-body">
+            <h6>Where do I ask support questions?</h6>
+            <p>Support is available through both <a href="https://github.com/errata-ai/vale-server/issues" target="_blank">GitHub issues</a> and <a href="mailto:support@errata.ai" target="_blank"
+          >email</a> (<code>support@errata.ai</code>). You'll typically receive a response in less than 24 hours.</p>
           </div>
         </div>
       </li>
