--- a/content/vale-server.html
+++ b/content/vale-server.html
@@ -4,7 +4,7 @@ slug: vale-server
 
 layout: blank
 
-css: ["popimg.css", "devices.min.css", "button.css"]
+css: ["popimg.css", "button.css"]
 js: ["platform.js"]
 
 gumroad: true
@@ -34,7 +34,7 @@ gumroad: true
         <div class="popover-image">
           <div
             class="popover-hotspot bg-warning animated infinite pulse"
-            style="top: 15%; left: 32%"
+            style="top: 16%; left: 32%"
             data-toggle="tooltip"
             data-html="true"
             title="Use your favorite applications&mdash;Vale Server integrates with web browsers, text editors, and more!"
