Remove Gumroad embed
Signed-off-by: Joseph Kato <joseph@jdkato.io>

--- a/content/vale-server.html
+++ b/content/vale-server.html
@@ -6,8 +6,6 @@ layout: blank
 
 css: ["popimg.css", "button.css"]
 js: ["platform.js"]
-
-gumroad: true
 ---
 
 <section class="pb-0 bg-white">
@@ -614,10 +612,10 @@ gumroad: true
             <tr>
               <th scope="row"></th>
               <td>
-                <a class="gumroad-button" href="https://gum.co/tfzHE" target="_blank" data-gumroad-single-product="true">Buy now</a>
+                <a class="gumroad-button" href="https://gum.co/tfzHE" target="_blank"><span class="gumroad-button-logo"></span> Buy now</a>
               </td>
               <td>
-                <a class="gumroad-button" href="https://gum.co/VtmAp" target="_blank" data-gumroad-single-product="true">Sign up</a>
+                <a class="gumroad-button" href="https://gum.co/VtmAp" target="_blank"><span class="gumroad-button-logo"></span> Sign up</a>
               </td>
             </tr>
           </tbody>
