--- a/content/vale-server.html
+++ b/content/vale-server.html
@@ -218,7 +218,7 @@ js: ["platform.js"]
             target="_blank"
           >
             <img
-              src="/img/logos/atom.png"
+              src="/img/logos/sized/atom.png"
               alt="Atom"
               class="CircleBadge-icon"
             />
@@ -251,7 +251,7 @@ js: ["platform.js"]
             target="_blank"
           >
             <img
-              src="/img/logos/sublime.png"
+              src="/img/logos/sized/sublime.png"
               alt="Sublime Text"
               class="CircleBadge-icon"
             />
@@ -267,7 +267,7 @@ js: ["platform.js"]
             target="_blank"
           >
             <img
-              src="/img/logos/code.png"
+              src="/img/logos/sized/code.png"
               alt="VS Code"
               class="CircleBadge-icon"
             />
@@ -283,7 +283,7 @@ js: ["platform.js"]
             target="_blank"
           >
             <img
-              src="/img/logos/chrome.png"
+              src="/img/logos/sized/chrome.png"
               alt="Google Chrome"
               class="CircleBadge-icon"
             />
