--- a/content/manage.html
+++ b/content/manage.html
@@ -15,7 +15,14 @@ js: ["manage.js"]
     class="bg-image"
   />
   <div class="container align-self-start">
-    <div class="row">
+    <div class="row mb-5">
+      <div class="col text-center">
+        <i class="fa fa-cogs fa-4x" aria-hidden="true"></i>
+      </div>
+      <!--end of col-->
+    </div>
+    <!--end of row-->
+    <div class="row justify-content-center">
       <div class="col-12 col-md-8 col-lg-7">
         <div id="activations">
           <table id="act-list" class="table align-items-center">
