--- a/content/vale-server.html
+++ b/content/vale-server.html
@@ -612,10 +612,10 @@ js: ["platform.js"]
             <tr>
               <th scope="row"></th>
               <td>
-                <a class="gumroad-button" href="https://gum.co/tfzHE" target="_blank"><span class="gumroad-button-logo"></span> Buy now</a>
+                <button type="button" class="btn btn-secondary" disabled>Coming soon</button>
               </td>
               <td>
-                <a class="gumroad-button" href="https://gum.co/VtmAp" target="_blank"><span class="gumroad-button-logo"></span> Sign up</a>
+                <button type="button" class="btn btn-secondary" disabled>Coming soon</button>
               </td>
             </tr>
           </tbody>
