--- a/content/landing.html
+++ b/content/landing.html
@@ -56,7 +56,7 @@ layout: blank
         <ul class="feature-list feature-list-sm row">
 
           <li class="col-6 col-md-4">
-            <a class="card text-center" href="/installation/">
+            <a class="card text-center" href="/docs/getting-started/installation/">
               <div class="card-body">
                 <i class="icon-browser text-green display-4"></i>
                 <h6 class="title-decorative">Installation</h6>
