--- a/content/landing.html
+++ b/content/landing.html
@@ -6,7 +6,11 @@ layout: blank
 ---
 
 <section class="bg-dark text-light">
-  <img alt="Image" src="/img/backgrounds/graphic-bg-clouds-2.png" class="bg-image" />
+  <img
+    alt="Image"
+    src="/img/backgrounds/graphic-bg-clouds-2.png"
+    class="bg-image"
+  />
   <div class="container">
     <div class="row justify-content-center mb-5">
       <div class="col-auto text-center">
@@ -25,11 +29,17 @@ layout: blank
             </div>
             <!--end of col-->
             <div class="col">
-              <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="Search topics or keywords" />
+              <input
+                class="form-control form-control-lg form-control-borderless"
+                type="search"
+                placeholder="Search topics or keywords"
+              />
             </div>
             <!--end of col-->
             <div class="col-auto">
-              <button class="btn btn-lg btn-success" type="submit">Search</button>
+              <button class="btn btn-lg btn-success" type="submit">
+                Search
+              </button>
             </div>
             <!--end of col-->
           </div>
@@ -54,9 +64,11 @@ layout: blank
     <div class="row justify-content-center">
       <div class="col-12 col-lg-10">
         <ul class="feature-list feature-list-sm row">
-
           <li class="col-6 col-md-4">
-            <a class="card text-center" href="/docs/getting-started/installation/">
+            <a
+              class="card text-center"
+              href="/docs/getting-started/installation/"
+            >
               <div class="card-body">
                 <i class="icon-browser text-green display-4"></i>
                 <h6 class="title-decorative">Installation</h6>
@@ -122,7 +134,9 @@ layout: blank
             <a class="card text-center" href="#">
               <div class="card-body">
                 <i class="icon-folder text-blue display-4"></i>
-                <h6 class="title-decorative">Plug-ins, Add-ons, and Services</h6>
+                <h6 class="title-decorative">
+                  Plug-ins, Add-ons, and Services
+                </h6>
               </div>
             </a>
           </li>
@@ -135,7 +149,6 @@ layout: blank
               </div>
             </a>
           </li>
-
         </ul>
       </div>
       <!--end of col-->
@@ -155,7 +168,6 @@ layout: blank
     </div>
     <!--end of row-->
     <ul class="feature-list feature-list-sm row">
-
       <li class="col-12 col-md-6 col-lg-4">
         <div class="card">
           <div class="card-header d-flex justify-content-between">
@@ -359,13 +371,15 @@ layout: blank
         <!--end of card-->
       </li>
       <!--end of col-->
-
     </ul>
     <!--end of row-->
     <div class="row justify-content-center text-center section-outro">
       <div class="col-lg-4 col-md-5">
         <h6>Didn't find what you were after?</h6>
-        <p>As we’re always improving the knowledgebase, your feedback is much appreciated</p>
+        <p>
+          As we’re always improving the knowledgebase, your feedback is much
+          appreciated
+        </p>
         <a href="#">Contact support &rsaquo;</a>
       </div>
       <!--end of col-->
