--- a/content/landing.html
+++ b/content/landing.html
@@ -5,17 +5,17 @@ slug: docs
 layout: blank
 ---
 
-<section class="bg-dark text-light">
+<section class="bg-white text-dark">
   <img
     alt="Image"
-    src="/img/backgrounds/graphic-bg-clouds-2.png"
+    src="/img/backgrounds/graphic-bg-clouds-1.png"
     class="bg-image"
   />
   <div class="container">
     <div class="row justify-content-center mb-5">
       <div class="col-auto text-center">
         <span class="title-decorative">Get Started</span>
-        <h1 class="display-4">Welcome to Vale docs</h1>
+        <h1 class="display-4">How can we help?</h1>
       </div>
       <!--end of col-->
     </div>
@@ -44,6 +44,18 @@ layout: blank
             <!--end of col-->
           </div>
         </form>
+        <div>
+          <p class="text-muted">
+            Suggestions:
+            <span class="badge badge-pill badge-secondary">regex</span>
+            <span class="badge badge-pill badge-secondary">styles</span>
+            <span class="badge badge-pill badge-secondary">scopes</span>
+            <span class="badge badge-pill badge-secondary">cli</span>
+            <span class="badge badge-pill badge-secondary">vocab</span>
+            <span class="badge badge-pill badge-secondary">packages</span>
+            <span class="badge badge-pill badge-secondary">ci/cd</span>
+          </p>
+        </div>
       </div>
       <!--end of col-->
     </div>
@@ -52,7 +64,7 @@ layout: blank
   <!--end of container-->
 </section>
 
-<section class="">
+<section class="bg-light">
   <div class="container">
     <div class="row justify-content-center mb-5">
       <div class="col-auto">
@@ -79,7 +91,7 @@ layout: blank
           <li class="col-6 col-md-4">
             <a class="card text-center" href="#">
               <div class="card-body">
-                <i class="icon-power-plug text-orange display-4"></i>
+                <i class="icon-text-document text-green display-4"></i>
                 <h6 class="title-decorative">File Formats & Scoping</h6>
               </div>
             </a>
@@ -88,7 +100,7 @@ layout: blank
           <li class="col-6 col-md-4">
             <a class="card text-center" href="#">
               <div class="card-body">
-                <i class="icon-credit-card text-yellow display-4"></i>
+                <i class="icon-cog text-green display-4"></i>
                 <h6 class="title-decorative">Configuration</h6>
               </div>
             </a>
@@ -106,7 +118,7 @@ layout: blank
           <li class="col-6 col-md-4">
             <a class="card text-center" href="#">
               <div class="card-body">
-                <i class="icon-shield text-teal display-4"></i>
+                <i class="icon-chat text-green display-4"></i>
                 <h6 class="title-decorative">Vocabularies</h6>
               </div>
             </a>
@@ -115,7 +127,7 @@ layout: blank
           <li class="col-6 col-md-4">
             <a class="card text-center" href="#">
               <div class="card-body">
-                <i class="icon-folder text-blue display-4"></i>
+                <i class="icon-box text-green display-4"></i>
                 <h6 class="title-decorative">Packages</h6>
               </div>
             </a>
@@ -124,7 +136,7 @@ layout: blank
           <li class="col-6 col-md-4">
             <a class="card text-center" href="#">
               <div class="card-body">
-                <i class="icon-folder text-blue display-4"></i>
+                <i class="icon-cloud text-green display-4"></i>
                 <h6 class="title-decorative">Vale Server</h6>
               </div>
             </a>
@@ -133,7 +145,7 @@ layout: blank
           <li class="col-6 col-md-4">
             <a class="card text-center" href="#">
               <div class="card-body">
-                <i class="icon-folder text-blue display-4"></i>
+                <i class="icon-power-plug text-green display-4"></i>
                 <h6 class="title-decorative">
                   Plug-ins, Add-ons, and Services
                 </h6>
@@ -144,7 +156,7 @@ layout: blank
           <li class="col-6 col-md-4">
             <a class="card text-center" href="#">
               <div class="card-body">
-                <i class="icon-folder text-blue display-4"></i>
+                <i class="icon-clipboard text-green display-4"></i>
                 <h6 class="title-decorative">Cheat Sheets</h6>
               </div>
             </a>
@@ -158,7 +170,7 @@ layout: blank
   <!--end of container-->
 </section>
 
-<section class="flush-with-above">
+<section class="bg-light flush-with-above">
   <div class="container">
     <div class="row justify-content-center mb-5">
       <div class="col-auto">
@@ -380,7 +392,7 @@ layout: blank
           As we’re always improving the knowledgebase, your feedback is much
           appreciated
         </p>
-        <a href="#">Contact support &rsaquo;</a>
+        <a href="mailto:jdkato@vale.sh">Contact support &rsaquo;</a>
       </div>
       <!--end of col-->
     </div>
